NOTE: Specific #s below correspond to Trac tickets logged and maintained at https://trac.torproject.org/projects/tor/
1.0.7.3
- updated strings
- adding in manual locale selection

1.0.7.2
- added obfsproxy binary to res/raw and binary installation process
- added new preferences to support obfsproxy bridge configuration
- upgraded tor binary to 0.2.3.11-alpha

1.0.7
- reduced data folder size by making geoip file only installed on demand
- added options for turning of persistent notification
- enabled access to localhost ports for SOCKS, HTTP, etc even when transproxy is on
- improved handling of tor and privoxy binary upgrades
- updated openssl to 1.0.0f to address recent SSLv3 threat
- check for root mode uses "which su" command and does not look for Superuser.apk
- changed tor binary res/raw storage mechanism to use the "mp3" file ext trick

1.0.6.1
- small fixes to wizard UI
- fixed "exit" problem, after running wizard

1.0.6
- updated tablet layout graphic sizing
- stopped Orweb from being transparent proxied (not needed)
- updated to Tor 0.2.3.7-alpha binary 
- geoip database now included for exit/entrace node control
- stopped iptables rule purging if transproxy is not enabled (conflicted with DroidWall and others)

1.0.5.3
- added auto-tor of wireless and usb tethering
- integrated new setup wizard
- moved large tor binary into split multiple 1M segments to fix for devices with 1M resource limit

1.0.5.1/.2
- small updates to layout of main screen to fit smaller screens
- fixed preference setting of EntryNode torrc value

1.0.5
- added exit node and "StrictExitNode" preference
- fixed tor binary installation issue related to max resource size and compression
- updated "start on boot" code to test for proper launch event
- updated to Tor 0.2.2.25-alpha binary
- moved back to single notification bar id to avoid double entries
- cleaned up progress dialog and alert handling to avoid leaky windows