@@ -1,5 +1,7 @@
 NOTE: Specific #s below correspond to Trac tickets logged and maintained at https://trac.torproject.org/projects/tor/
+
 1.0.7.3
+- fixed tor control port cookie file path lookup related to #5305 
 - updated strings
 - adding in manual locale selection
 
